# spotify-data-analysis

./: .env  .gitignore  CNAME  Inferences.json  analysis.ipynb  bake.py  baked_pie.py  blank_notebook.ipynb  build  build.sh  built.pie  config.env  converted.html  converter.js  esp32_conector.py  export.sh  filters.py  fuzzy_searchers.py  generic_plots.py  index.html  inferences-cleaning.ipynb  main.py  my_spotify_data.json  package-lock.json  package.json  preprocessing.py  processors.py  project.ipynb  pyproject.toml  pyrightconfig.json  requirements.txt  setup  setup.sh  spotify-data-analysis-app.code-workspace  spotifyapi.ipynb  spotifyjsonparser.py  temp.py  tsconfig.json  unique_tracks.json
.ipynb_checkpoints/: project-checkpoint.ipynb
OLD/: utils.py
__track-info/: clean.js  cleaned-mapped-uris-mbid.json  mapped-uris-mbid.json  p.py  song-genre-data.json  unique_tracks.json
analysis/: K-yYk8aOPQMgRS9rbP_xk.json  pgb6TRTsCg5bDNGTNp5_m.json  sxXL4HGDtFHN0xvJUeepV.json  tUkEHiIZFgN7ctpR5tE46.json
builds/: built.pie
frontend/: package-lock.json  package.json
inferences/: inferences-anant.json  inferences-cleaning.ipynb
pie/: analysis_generator.py  process_zip.py  spotify-data-analysis-app.code-workspace  test.py
scripts/: bake.py  build.sh  converter.js  export.py  export.sh
src/: common.typings.d.ts  converter.ts
utils/: TrackInfoClasses.py  compiled.py  extract_from_timestamp.py  fig_to_uri.py  filters.py  fuzzy_searchers.py  generate_frame.py  generic_plots.py  get_track_metadata.py  plots.py  printers.py  process_zip.py  series_textellipses.py  (+2 more)
(+45 files in other folders)
